--- a/package.json
+++ b/package.json
@@ -34,36 +34,38 @@
     "rebuild": "npm run clean && npm run build",
     "package": "vsce package",
     "publish": "vsce publish",
-    "clean": "gulp clean"
+    "clean": "gulp clean",
+    "check": "npm-upgrade check"
   },
   "dependencies": {
     "async-mutex": "^0.1.3",
-    "chokidar": ">=2.1.1",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.1.0",
+    "npm-audit-resolver": "^1.5.0",
     "performance-now": "^2.1.0",
-    "tslib": "^1.9.3",
+    "tslib": "^1.10.0",
     "uuid": "^3.3.2",
-    "vscode-nls": "^4.1.0",
+    "vscode-nls": "^4.1.1",
     "vscode-test-adapter-api": "^1.7.0",
     "vscode-test-adapter-util": "^0.7.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.5",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^12.0.0",
-    "del": "^4.1.1",
+    "@types/fs-extra": "^8.0.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.2",
+    "del": "^5.0.0",
     "event-stream": "4.0.1",
-    "gulp": "^4.0.1",
+    "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
-    "gulp-filter": "^5.1.0",
+    "gulp-filter": "^6.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "5.0.1",
-    "mocha": "^6.1.4",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
-    "vsce": ">=1.61.0",
-    "vscode": "^1.1.33",
-    "vscode-nls-dev": "^3.2.6"
+    "mocha": "^6.2.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3",
+    "vsce": ">=1.66.0",
+    "vscode": "^1.1.36",
+    "vscode-nls-dev": "^3.3.1",
+    "npm-upgrade": ">=2.0.0"
   },
   "engines": {
     "node": ">=10.15",
